add audio to diarya

--- a/index.html
+++ b/index.html
@@ -184,6 +184,8 @@
         </div>
     </div>
 
+    <audio src="/assets/audio/massobeats - honey jam (royalty free lofi music).mp3" controls loop autoplay></audio>
+
     <script src="/assets/js/main.js"></script>
 </body>
 </html>
