fix:fixing audio to diarya

--- a/index.html
+++ b/index.html
@@ -183,8 +183,11 @@
             </div>
         </div>
     </div>
-
-    <audio src="/assets/audio/massobeats - honey jam (royalty free lofi music).mp3" controls loop autoplay></audio>
+    
+    <div class="music-control" id="musicControl">
+        <i class="fa-solid fa-play" id="musicIcon"></i>
+        <audio src="/assets/audio/massobeats - honey jam (royalty free lofi music).mp3" class="audio"></audio>
+    </div>
 
     <script src="/assets/js/main.js"></script>
 </body>
