update: change song

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     
     <div class="music-control" id="musicControl">
         <i class="fa-solid fa-play" id="musicIcon"></i>
-        <audio src="/assets/audio/massobeats - honey jam (royalty free lofi music).mp3" class="audio"></audio>
+        <audio src="/assets/audio/Avicii - The Days (Lyric Video).mp3" class="audio"></audio>
     </div>
 
     <script src="/assets/js/main.js"></script>
