update: add songs (stockholm and won't)

--- a/index.html
+++ b/index.html
@@ -107,12 +107,31 @@
                         </div>
                         <div class="page-content">
                             <div class="song-list">
+                                <!-- Yesterdau -->
                                 <div class="song-item">
                                     <div class="song-icon"><i class="fa-solid fa-music"></i></div>
                                     <div class="song-details">
                                         <h3>Yesterday</h3>
                                         <p>The Beatles</p>
                                         <div class="song-note">Lagu ini mengingatkan saya pada masa kecil bersama keluarga.</div>
+                                    </div>
+                                </div>
+                                <!-- Stockholm -->
+                                <div class="song-item">
+                                    <div class="song-icon"><i class="fa-solid fa-music"></i></div>
+                                    <div class="song-details">
+                                        <h3>Stockholm Syndrom</h3>
+                                        <p>One Direction</p>
+                                        <div class="song-note">-</div>
+                                    </div>
+                                </div>
+                                <!-- Wont GHWY Maroon 5-->
+                                <div class="song-item">
+                                    <div class="song-icon"><i class="fa-solid fa-music"></i></div>
+                                    <div class="song-details">
+                                        <h3>Won't Go Home Without You</h3>
+                                        <p>Marron 5</p>
+                                        <div class="song-note">-</div>
                                     </div>
                                 </div>
                             </div>
