update: add fastdc on tech

--- a/index.html
+++ b/index.html
@@ -152,6 +152,17 @@
                         <div class="page-content">
                             <div class="tech-list">
                                 <div class="tech-item">
+                                    <h3>FastDC</h3>
+                                    <div class="tech-tags">
+                                        <span class="tag">Python</span>
+                                        <span class="tag">Discord</span>
+                                        <span class="tag">Groq</span>
+                                    </div>
+                                    <p>FastDC adalah sebuah library python buatan saya, agar membuat bot discord menjadi lebih mudah dan cepat. 
+                                        anda bisa membaca dokumentasi dilink berikut : <a href="https://github.com/AryaWiratama26/fastdc/" target="_blank">Github FastDC</a>
+                                    </p>
+                                </div>
+                                <div class="tech-item">
                                     <h3>AI & Machine Learning</h3>
                                     <div class="tech-tags">
                                         <span class="tag">Python</span>
