update: update photo

--- a/index.html
+++ b/index.html
@@ -210,6 +210,10 @@
                                     <img src="/assets/img/foto-rand.jpg" alt="Foto 4" />
                                     <div class="gallery-caption">Foto Random dengan Teman SMA</div>
                                 </div>
+                                <div class="gallery-item">
+                                    <img src="/assets/img/sahid2.png" alt="Foto 5" />
+                                    <div class="gallery-caption">Foto product bersama teman baru</div>
+                                </div>
                             </div>
                         </div>
                     </div>
